--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 group 'com.github.myabcc17'
 archivesBaseName = 'chatbot-response-v2-builder'
-version '0.0.11'
+version '0.0.13'
 
 repositories {
     mavenCentral()
@@ -39,6 +39,7 @@ signing {
 }
 
 dependencies {
+    implementation 'org.projectlombok:lombok:1.18.18'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
@@ -50,8 +51,6 @@ dependencies {
     implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    //dependency for url validation library
-    compile group: 'commons-validator', name: 'commons-validator', version: '1.7'
 
     annotationProcessor('org.projectlombok:lombok:1.18.18')
 }
